--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 # Only project- and language-specific ignores in here. Use global .gitignore for editors etc
 # Nothing in here yet
+.idea
+.cache
+.project
+.settings
+.classpath
+3-enrich/scala-hadoop-enrich/lib/*.jar
